// Copyright 2026 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/bucketeer-io/bucketeer/v2/proto/feature";

message FeatureLastUsedInfo {
  enum Status {
    UNKNOWN = 0;
    NEW = 1;
    ACTIVE = 2;
    NO_ACTIVITY = 3;
  }
  string feature_id = 1;
  int32 version = 2;
  int64 last_used_at = 3;
  int64 created_at = 4;
  string client_oldest_version = 5;
  string client_latest_version = 6;
}